# crablink

./: .env  Cargo.toml  README.md  cliff.toml  deny.toml
chat-notify/: Cargo.toml
chat-server/: Cargo.toml  app.yml
chat-server/pem/: private.pem  public.pem
chat-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  test.rest
chat-server/src/handlers/: auth.rs
chat-server/src/middlewares/: auth.rs  mod.rs
chat-server/src/models/: mod.rs  user.rs
chat-server/src/utils/: jwt.rs  mod.rs  test.rs
